--- a/MADE/TEST.ipynb
+++ b/MADE/TEST.ipynb
@@ -2,72 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# библиотеки\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "6 -1\n",
-      "1 -3 2 -2 3 4\n"
-     ]
-    }
-   ],
-   "source": [
+    "import numpy as np\n",
     "# входные данные\n",
     "x = int(input()) #количество наборов входных данных\n",
-    "N,K = map(int, input().split())\n",
-    "sectors = np.array(list(map(int, input().split())))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "6 -1\n",
-      "1 -3 2 -2 3 4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sums = []\n",
-    "sectors= np.concatenate((sectors[K+1:],sectors[0:K]))\n",
-    "length=len(sectors)\n",
-    "for i in range(length):\n",
-    "    for j in range(length):\n",
-    "        if i==j:\n",
-    "            sums.append(sectors[i])\n",
-    "        else:\n",
-    "            sums.append(sectors[i:j+1].sum())\n",
-    "max(sums)"
+    "answer = []\n",
+    "for i in range(x):\n",
+    "    N,K = map(int, input().split())\n",
+    "    sectors = np.array(list(map(int, input().split())))\n",
+    "    sums = []\n",
+    "    sectors= np.concatenate((sectors[K+1:],sectors[0:K]))\n",
+    "    length=len(sectors)\n",
+    "    for i in range(length):\n",
+    "        for j in range(length):\n",
+    "            if i==j:\n",
+    "                sums.append(sectors[i])\n",
+    "            else:\n",
+    "                sums.append(sectors[i:j+1].sum())\n",
+    "    answer.append(max(sums))\n",
+    "\n",
+    "for i in answer:\n",
+    "    print(i)\n",
+    "    \n",
+    "#8 2\n",
+    "#2 3 4 5 -30 6 -1 2\n",
+    "    \n",
+    "#6 -1\n",
+    "#1 -3 2 -2 3 4"
    ]
   },
   {
